--- a/index.html
+++ b/index.html
@@ -1,55 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/09df56e628.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="develop/style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/09df56e628.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="develop/style.css" />
     <title>Weather App</title>
-</head>
-<body>
-    <nav class="bg-info container-fluid">
-        <span class="mb-0 ml-5 h1">Levi's Weather</span>
-        <span class="mb-0 h2 mr-5 mt-1 float-right" id="top-date"></span>
-        <span class="mb-0 mr-5 h2 mt-1 float-right" id="top-time"></span>
-
+  </head>
+  <body>
+    <nav class="container-fluid navBack">
+      <span class="mb-0 ml-5 h1">Levi's Weather</span>
+      <span class="mb-0 h2 mr-5 mt-1 float-right" id="top-date"></span>
+      <span class="mb-0 mr-5 h2 mt-1 float-right" id="top-time"></span>
     </nav>
 
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-3 ">
-                <div class="h4 mt-3 ml-1 mb-2">Search Your City:</div>
-                <div class="input-group mb-4 ml-1 mr-5">
-                    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                    <div class="input-group-append">
-                      <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
-                    </div>
-                </div>
-
-                <div class="list-group ml-1 mb-3">
-                    <a href="#" class="list-group-item list-group-item-action active">
-                      Cras justo odio
-                    </a>
-                    <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in asdasd</a>
-                    <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-                    <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-                    <a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">Vestibulum at eros</a>
-                  </div>
+      <div class="row">
+        <!-- search bar -->
+        <div class="col-3 searchAside rounded mt-3">
+          <div class="h4 mt-3 ml-1 mb-2">Search Your City:</div>
+          <div class="input-group mb-4 ml-1 mr-5">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="City Name"
+              aria-label="City Name"
+              aria-describedby="button-addon2"
+              id="cityName"
+            />
+            <div class="input-group-append">
+              <button class="btn bg-info" type="button" id="searchButton">
+                <i class="fas fa-search"></i>
+              </button>
             </div>
-            <div class="col-9 mt-4 float-right">
-                <div class="h3 ml-5 mt-3 mb-3" id="cityDisplay"></div>
-                <div class="lead ml-5 mb-3" id="temp"></div>
-                <div class="lead ml-5 mb-3" id="humid"></div>
-                <div class="lead ml-5 mb-3" id="wind"></div>
-                <div class="lead mb-3 ml-5" id="uv"></div>
-
-            </div>
+          </div>
+          <!-- city history -->
+          <div class="list-group ml-1 mb-3" id="cityHistory"></div>
         </div>
+        <!-- main weather -->
+        <div class="col-9 mt-1 float-right">
+          <div class="rounded shadow">
+            <div class="h3 ml-5 mt-2 mb-1" id="cityDisplay"></div>
+            <div id="icon"></div>
+            <div class="lead ml-5 mb-3" id="temp"></div>
+            <div class="lead ml-5 mb-3" id="humid"></div>
+            <div class="lead ml-5 mb-3" id="wind"></div>
+            <div class="lead mb-3 ml-5" id="uv">
+              UV Index:
+              <span id="uvNum">New</span>
+            </div>
+            <!-- 5 day forecast -->
+            <div class="h3 ml-3">5-Day Forecast:</div>
+            <div class="ml-3 row h3">
+              <div class="col-2 card mb-2">
+                <div class="card-body"></div>
+                <h5 class="card-title" id="date1">Card title</h5>
+                <div id="img1"></div>
+                <p class="card-text lead" id="temp1"></p>
+                <p class="card-text lead mb-1" id="humid1"></p>
+              </div>
+              <div class="col-2 ml-2 card mb-2">
+                <div class="card-body pt-1"></div>
+                <h5 class="card-title" id="date2">Card title</h5>
+                <div id="img2"></div>
+                <p class="card-text lead" id="temp2"></p>
+                <p class="card-text lead mb-1" id="humid2"></p>
+              </div>
+              <div class="col-2 ml-2 card mb-2">
+                <div class="card-body"></div>
+                <h5 class="card-title" id="date3">Card title</h5>
+                <div id="img3"></div>
+                <p class="card-text lead" id="temp3"></p>
+                <p class="card-text lead mb-1" id="humid3"></p>
+              </div>
+              <div class="col-2 ml-2 card mb-2">
+                <div class="card-body"></div>
+                <h5 class="card-title" id="date4">Card title</h5>
+                <div id="img4"></div>
+                <p class="card-text lead" id="temp4"></p>
+                <p class="card-text lead mb-1" id="humid4"></p>
+              </div>
+              <div class="col-2 ml-2 card mb-2">
+                <div class="card-body"></div>
+                <h5 class="card-title" id="date5">Card title</h5>
+                <div id="img5"></div>
+                <p class="card-text lead" id="temp5"></p>
+                <p class="card-text lead mb-1" id="humid5"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="develop/script.js"></script>
-</body>
+  </body>
 </html>
