added more comments

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <title>Weather App</title>
   </head>
   <body>
+    <!-- Nav Bar -->
     <nav class="container-fluid navBack">
       <span class="mb-0 ml-5 h1">Levi's Weather</span>
       <span class="mb-0 h2 mr-5 mt-1 float-right" id="top-date"></span>
